--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,26 @@
 
 
         ws.onopen = function (){
-            ws.send('来自客户端的信息;从客户端发给服务端!');
+          //ws.send(document.getElementById('text').value);
+          document.getElementById('btn').onclick = () => {
+            //console.log(document.getElementById('text').value);
+            ws.send(document.getElementById('text').value);
+          }
         }
         ws.onmessage = function (e){
-          console.log(e.data);
+          //console.log(e.data);
+            //document.body.innerHTML += '<p>'+e.data + '</p>';
+            var p =document.createElement('p');
+            p.innerHTML = e.data;
+            document.body.appendChild(p);
         }
         ws.onclose = function (){
           ws.close();//关闭连接
         }
     </script>
+
+    <input id='text' type='text'>
+    <button id='btn' type='button'>发送</button>
     <div id="root"></div>
    
   </body>
