polish websocket part

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </script>
 
     <input id='text' type='text'>
-    <button id='btn' type='button'>发送</button>
+    <button id='btn' type='submit'>发送</button>
     <div id="root"></div>
    
   </body>
